--- a/public/css/tomorrow.css
+++ b/public/css/tomorrow.css
@@ -192,6 +192,25 @@ td.tr-le, .error-text {
     text-decoration: none;
 }
 
+.modal-content {
+    background: hsla(222, 8%, 20%, 1);
+    border-color: #5a5a5a;
+}
+.modal-header {
+    background: #8149bf;
+}
+.modal-footer {
+    background: #191919;
+}
+.modal-footer span button {
+    border-color: black;
+}
+.modal-footer span #confirm_changes {
+    background: #5c966a;
+}
+.modal-footer span .close {
+    background: #cc4f4f;
+}
 
 #announce {
     color: #3a4249;
@@ -221,8 +240,29 @@ td.tr-le, .error-text {
 .tr-cat div.nyaa-cat { border-color: #232324!important; }
 .torrent-preview-table > table { border: 2px solid #1a1a1d; }
 
-.tag.pending { background: #1d6d90; color: #dadada; }
-.tag.pending a.tag-form { color: white; border-left: none; }
-.tag.pending a.tag-form.plus { background-color: #3f7137; }
-.tag.pending a.tag-form.minus { background-color: #9e3131; font-weight: bold;}
-span.tag { box-shadow: 0px 0px 1px 0px #373c42; }
+.tag.pending {
+    background: #3c3c3c;
+    color: #c1c1c1;
+    border: 1px solid black;
+}
+.tag.pending a.tag-form {
+    color: white;
+    border-left: none;
+}
+.tag.pending a.tag-form.plus {
+    background-color: #3f7137;
+}
+.tag.pending a.tag-form.minus {
+    background-color: #9e3131;
+    font-weight: bold;
+}
+span.tag {
+    box-shadow: none;
+}
+.tag.accepted {
+    border: 1px solid #000000;
+    background: #272523;
+}
+.tag.accepted .tag-text a {
+    color: #7a8494;
+}
